<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emergency_activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blek_blue"
    android:fitsSystemWindows="true"
    tools:context="ch.epfl.balelecbud.EmergencyActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/emergency_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blek_blue"
            app:theme="@style/ToolBarStyle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/buttonAskForHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="420dp"
                android:text="@string/ask_for_help"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="186dp"
                android:layout_marginBottom="30dp"
                android:text="@string/you_can_report_an_emergency_here"
                app:layout_constraintBottom_toTopOf="@+id/buttonAskForHelp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/emergency_activity_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blek_blue"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/root_activity_nav_header"
        app:itemIconTint="@color/blek_orange"
        app:itemTextAppearance="@style/blek_font_style"
        app:menu="@menu/root_activity_menu_header" />
</androidx.drawerlayout.widget.DrawerLayout>